[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/dining_room/Patron.gd" type="Script" id=1]
[ext_resource path="res://assets/misc/wish-bg.png" type="Texture" id=2]
[ext_resource path="res://assets/food/black_forest_hole.png" type="Texture" id=3]
[ext_resource path="res://scenes/shared/DishScore.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/dining_room/PatronAvatarCommand.gd" type="Script" id=5]
[ext_resource path="res://scenes/dining_room/PatronAvatarLevel.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.66666
height = 16.6667

[sub_resource type="CapsuleShape2D" id=3]
radius = 16.0
height = 14.0

[node name="Patron" type="Node"]
script = ExtResource( 1 )

[node name="EatTimer" type="Timer" parent="."]
one_shot = true

[node name="CommandAvatar" type="KinematicBody2D" parent="."]
position = Vector2( 100, 0 )
collision_layer = 2
collision_mask = 2
input_pickable = true
script = ExtResource( 5 )

[node name="DishWish" type="Node2D" parent="CommandAvatar"]
position = Vector2( 120, -70 )

[node name="Background" type="Sprite" parent="CommandAvatar/DishWish"]
position = Vector2( 108.496, -69.1807 )
scale = Vector2( 7.39075, 4.2756 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="CommandAvatar/DishWish"]
position = Vector2( 112, -136 )
texture = ExtResource( 3 )

[node name="Ingredients" type="Node2D" parent="CommandAvatar/DishWish"]
position = Vector2( 5, -40 )

[node name="DishScore" parent="CommandAvatar" instance=ExtResource( 4 )]
position = Vector2( 15, -15 )

[node name="DishPosition" type="Node2D" parent="CommandAvatar"]
position = Vector2( 0, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CommandAvatar"]
position = Vector2( 0.333332, 0 )
scale = Vector2( 3.5, 3.5 )
shape = SubResource( 6 )

[node name="LevelAvatar" type="KinematicBody2D" parent="."]
input_pickable = true
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelAvatar"]
shape = SubResource( 3 )

[node name="DialogLine" type="RichTextLabel" parent="LevelAvatar"]
margin_left = -300.0
margin_top = -60.0
margin_right = 300.0
margin_bottom = -20.0
bbcode_enabled = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="input_event" from="CommandAvatar" to="CommandAvatar" method="_on_CommandAvatar_input_event"]
[connection signal="input_event" from="LevelAvatar" to="LevelAvatar" method="_on_LevelAvatar_input_event"]
[connection signal="mouse_entered" from="LevelAvatar" to="LevelAvatar" method="_on_LevelAvatar_mouse_entered"]
[connection signal="mouse_exited" from="LevelAvatar" to="LevelAvatar" method="_on_LevelAvatar_mouse_exited"]
